# axum-inertia-mvc

./: .env.example  .gitignore  Cargo.toml  Dockerfile.dev  README.md  RELEASE_NOTES.md  docker-compose.yml  env.example  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-api.sh  test-incident.sh  vite.config.ts
app/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  components.json  package.json  tsconfig.json
app/src/: main.rs  main.tsx
app/src/db/: connection.rs  mod.rs
app/src/db/migrations/: 20250524000001_create_documents_table.sql
app/src/db/repositories/: document_repository.rs
app/src/db/seeds/: documents.rs  mod.rs  runner.rs
app/src/routes/: auth.rs  home.rs  jobs.rs  mod.rs  monitors.rs  status.rs
app/src/services/: document_service.rs  mod.rs  monitor_service.rs
app/src/services/worker/: job_queue.rs  mod.rs
app/src/views/components/: app-sidebar.tsx  chart-area-interactive.tsx  compact-monitor-card.tsx  data-table.tsx  incident-banner.tsx  monitor-data-table.tsx  nav-documents.tsx  nav-secondary.tsx  nav-user.tsx  section-cards.tsx  service-group-card.tsx  site-header.tsx  status-tracker.tsx
app/src/views/components/ui/: accordion.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  carousel.tsx  command.tsx  dialog.tsx  form.tsx  hover-card.tsx  input-otp.tsx  menubar.tsx  radio-group.tsx  scroll-area.tsx  sheet.tsx  sidebar.tsx  switch.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
app/src/views/layouts/: Main.tsx
app/src/views/pages/: Dashboard.tsx  EnhancedStatusPage.tsx  Login.tsx  MonitorDetail.tsx  MonitorEdit.tsx  Monitors.tsx
src/: main.rs
src/db/: error.rs
src/db/migrations/: mod.rs
src/db/repositories/: mod.rs
src/db/seeds/: documents.rs
src/routes/: home.rs
src/views/components/: nav-main.tsx
src/views/components/ui/: alert-dialog.tsx  alert.tsx  breadcrumb.tsx  calendar.tsx  chart.tsx  checkbox.tsx  context-menu.tsx  drawer.tsx  dropdown-menu.tsx  input.tsx  label.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  resizable.tsx  select.tsx  separator.tsx  skeleton.tsx  slider.tsx  table.tsx  tabs.tsx
src/views/pages/: Home.tsx
terraform-provider-rustgenie/: README.md  go.mod
terraform-provider-rustgenie/examples/: main.tf
terraform-provider-rustgenie/internal/provider/: api_client.go  provider.go
terraform-provider-statusmonitor/: Makefile  README.md  go.mod  go.sum  main.go
terraform-provider-statusmonitor/internal/provider/: api_client.go  monitor_data_source.go  monitor_resource.go  provider.go
worker/: Cargo.toml  Dockerfile  Dockerfile.dev  LOGGING.md  README.md
worker/src/: main.rs
worker/src/tasks/: check_monitor.rs  mod.rs  schedule_monitors.rs  send_email.rs
