[package]
name = "axum-inertia-mvc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-inertia = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
dotenv = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
graphile_worker = { workspace = true }

[dev-dependencies]
cargo-watch = "8.5.2"
