[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
db-core = { path = "../packages/db-core" }
graphile_worker = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
cargo-watch = "8.5.2"
